--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+
+    h1 {
+      color: blue;
+      /* font-size: 200px;
+      text-align: center; */
+    }
+
+    /* div {
+      width: 200px;
+      height: 200px;
+      background-color: red;
+    } */
+
+    #heading1 {
+      color: red;
+    }
+
+    #heading2 {
+      color: green;
+    }
+    .headings {
+      color: orange;
+    }
+  </style>
 </head>
 <body>
   
+  <h1 id="heading1">Hello World!</h1>
+  <h1 id="heading2" class="headings">Hello World!</h1>
+  <h1 class="headings">Hello World!</h1>
+  <h1 class="headings">Hello World!</h1>
+  <h1 class="headings">Hello World!</h1>
   <h1>Hello World!</h1>
+
+  <!-- lorem ipsum hotdog -->
+  <!-- <div></div>
+  <div></div> -->
 
 </body>
 </html>
